--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:layout_constraintRight_toRightOf="parent">
         
         <ImageView
+            style="@style/Base.Icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_refresh"
