--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        style="@style/Text.Header"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/amber_700"
+        android:id="@+id/tv_header_paper"
+        android:text="@string/header_paper"/>
+
+    <TextView
+        style="@style/Text.Header"
+        app:layout_constraintTop_toBottomOf="@id/tv_header_paper"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/light_green_500"
+        android:id="@+id/tv_header_scissors"
+        android:text="@string/header_scissors"/>
+
+    <TextView
+        style="@style/Text.Header"
+        app:layout_constraintTop_toBottomOf="@id/tv_header_scissors"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/purple_300"
+        android:id="@+id/tv_header_rock"
+        android:text="@string/header_rock"/>
+
     <FrameLayout
         android:id="@+id/fl_replay_button"
         android:layout_width="0dp"
@@ -22,14 +50,4 @@
             android:src="@drawable/ic_refresh"
             android:contentDescription="@string/replay_button_description" />
     </FrameLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
