--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,14 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    
+    <style name="Text.Header" parent="Theme.BinarAndroidChapter4Challenge">
+        <item name="android:fontFamily">@font/comic_neue_bold</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">35sp</item>
+    </style>
 
     <style name="Base.Icon" parent="Theme.BinarAndroidChapter4Challenge">
         <item name="android:tint">@color/black</item>
