Initiated styling for hand buttons

--- a/app/src/main/res/drawable/ic_rock.xml
+++ b/app/src/main/res/drawable/ic_rock.xml
@@ -15,7 +15,7 @@
       android:fillType="evenOdd"/>
   <path
       android:pathData="M1209.7,983.9l19.7,-73.6c438.6,19.4 856.5,37.9 1295.1,57.3 24.8,208.5 -262.1,258.8 -375.4,121 -98.8,139.6 -338.2,116.1 -434,-18.3 -145.5,81.3 -453.3,133.9 -505.4,-86.5Z"
-      android:fillColor="#000000"
+      android:fillColor="#1A332C2B"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M2099.9,436.1q12,243.1 24.1,486.1c18.7,62.5 35.4,88.4 96.8,115.4 67.4,29.6 135.1,28.8 205.7,15 252.6,-49.2 182.4,-566.4 48.7,-641.8 -74.8,-42.2 -170.4,-76 -238.2,-57.7 -60.1,20.8 -109.1,33.3 -137.1,83Z"
