--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,9 +26,17 @@
     </style>
 
     <style name="Text.Player" parent="Text.Base">
-        <item name="android:textColor">@color/light_blue_500</item>
+        <item name="android:textColor">@color/light_blue_600</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_marginTop">75dp</item>
+    </style>
+
+    <style name="Base.Button" parent="Theme.BinarAndroidChapter4Challenge">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">100dp</item>
     </style>
 
     <style name="Base.Icon" parent="Theme.BinarAndroidChapter4Challenge">
