--- a/app/src/main/res/drawable/ic_paper.xml
+++ b/app/src/main/res/drawable/ic_paper.xml
@@ -1,45 +1,68 @@
+<!--
+Source (to convert svg to xml):
+https://svg2vector.com/
+(Click "copy code")
+-->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="26.9dp"
-    android:height="36.9dp"
-    android:viewportWidth="1672.1"
-    android:viewportHeight="2288.4">
+    android:viewportWidth="1672.13"
+    android:viewportHeight="2288.42"
+    android:width="95.45244dp"
+    android:height="130.6329dp">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M343.6,2214.5c292,62.3 590.8,43.2 873.7,11.5 135.4,-15.2 268.8,-133 272.7,-284.2 10,-389.3 -13.1,-763.9 2.1,-1158 6.9,-180.3 -272.5,-142.6 -268.3,-3 0,-151.6 0,-303.3 0,-454.9 0.8,-106.9 -205.5,-137.8 -223.5,-16.2 44.7,-263.6 -353.4,-239.4 -305.4,-23.2 -23.5,-163.1 -279.9,-141.3 -302.2,62.4 -11.2,186.2 -22.4,372.5 -33.5,558.7 -49.9,-211.8 -284.7,-173.3 -310.1,-30.6 -1.4,309.5 -33.4,620.5 -4.1,928.5 17.4,183 130.1,373.1 298.5,409z"/>
+      android:pathData="M343.61 2214.52c292.01 62.34 590.8 43.21 873.73 11.49 135.4 -15.18 268.84 -133 272.73 -284.18 10.01 -389.31 -13.07 -763.89 2.1 -1158 6.93 -180.25 -272.53 -142.59 -268.26 -3.05 0 -151.64 0 -303.28 0 -454.92 0.75 -106.87 -205.51 -137.84 -223.48 -16.24 44.66 -263.62 -353.39 -239.37 -305.35 -23.17 -23.53 -163.06 -279.87 -141.32 -302.18 62.41 -11.18 186.23 -22.36 372.47 -33.54 558.71 -49.9 -211.8 -284.68 -173.3 -310.12 -30.56 -1.36 309.52 -33.38 620.46 -4.1 928.52 17.39 183 130.12 373.06 298.46 409z"
+      android:fillColor="#FCD4BE"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M693.9,282L695.1,1304.6"/>
+      android:pathData="M693.88 281.98L695.08 1304.61"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1002.9,286.4L1002.9,1304.3"/>
+      android:pathData="M1002.88 286.44L1002.88 1304.28"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1223.9,770.8L1223.9,1352.2"/>
+      android:pathData="M1223.91 770.85L1223.91 1352.23"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M359.4,907.5l0,587.6c290.6,104.4 352.6,257.9 358,423.7"/>
+      android:pathData="M359.36 907.55l0 587.56c290.56 104.36 352.57 257.94 357.99 423.71"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:pathData="M82.9,1850.7c-3.9,-120.2 -18.9,-241.4 -11.7,-360.6 12.1,-202.7 11.2,-408.8 11.1,-609.2 -0,-12.4 17.6,-59.5 57,-78 6.4,936.8 25.2,1306.5 1032.4,1393.9 -293.4,39.8 -571.2,35.5 -831.8,-17.2 -166.9,-44.2 -239.9,-190.7 -257,-328.9z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M82.91 1850.74c-3.91 -120.21 -18.85 -241.4 -11.73 -360.64 12.1 -202.73 11.21 -408.84 11.1 -609.16 -0.01 -12.45 17.63 -59.51 57.02 -78 6.42 936.81 25.17 1306.53 1032.45 1393.88 -293.43 39.81 -571.21 35.51 -831.83 -17.2 -166.92 -44.19 -239.86 -190.67 -257.01 -328.88z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M422.8,399.7c-11.4,186.7 -23.7,370.8 -28.4,561.7 -3.9,158.4 -0.4,317 -0.6,475.5 50.6,-77.2 118.3,-122.9 201.5,-131.2 -60.6,-13.4 -103.6,-48.7 -98.7,-116.8 4.4,-320.9 8.9,-641.8 13.4,-962.7 -43.1,18.4 -86.7,59 -87.1,173.5z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M422.83 399.72c-11.39 186.72 -23.66 370.82 -28.37 561.7 -3.91 158.44 -0.41 317 -0.61 475.5 50.56 -77.2 118.28 -122.95 201.48 -131.19 -60.56 -13.42 -103.58 -48.7 -98.72 -116.8 4.45 -320.9 8.91 -641.79 13.36 -962.68 -43.12 18.4 -86.68 58.95 -87.14 173.48z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M723.9,254.6c1.5,349.8 3.1,699.6 4.7,1049.4 25,-10.4 56.8,-14.8 138.6,-13.4 -126.8,-294.7 -98.2,-701.5 -56.4,-1134.9 -49.3,12.6 -84.8,40.5 -86.9,98.9z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M723.93 254.63c1.55 349.79 3.12 699.6 4.66 1049.39 24.97 -10.43 56.79 -14.75 138.63 -13.44 -126.84 -294.66 -98.21 -701.5 -56.38 -1134.89 -49.27 12.56 -84.8 40.53 -86.91 98.94z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M1036,353.1l-0.1,-38c-0.1,-44.3 56.3,-52.6 63.1,-50.7 -37,356.3 -36,709.2 23.4,1056.7 -28.2,-12.4 -57.1,-16.4 -86.4,-15.6 0,-317.5 0,-634.9 0,-952.4z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M1036.02 353.06l-0.07 -38.01c-0.08 -44.31 56.34 -52.56 63.08 -50.69 -36.98 356.32 -36.01 709.16 23.36 1056.7 -28.19 -12.36 -57.07 -16.37 -86.37 -15.6 0 -317.46 0 -634.92 0 -952.39z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M1353.6,696c-56.1,202.1 -68.2,418.1 -6.3,643.3 -29.9,-3.9 -60.5,-2.6 -91,12.1l0.4,-529.3c0,-22.7 -1.3,-39.8 1.3,-57.2 1.3,-8.7 5.2,-16.7 10,-23.7 15.8,-23.1 43,-38.7 85.6,-45.1z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M1353.61 696c-56.11 202.12 -68.24 418.09 -6.29 643.32 -29.86 -3.91 -60.5 -2.58 -90.99 12.08l0.4 -529.33c0.02 -22.73 -1.28 -39.84 1.33 -57.19 1.31 -8.7 5.23 -16.73 10.01 -23.74 15.78 -23.13 42.97 -38.68 85.55 -45.14z"
+      android:fillColor="#F3B091" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M460.5,29.3c-189.8,95.7 -238.4,243.6 -226.6,413.9"/>
+      android:pathData="M460.48 29.32c-189.77 95.74 -238.4 243.64 -226.64 413.86"
+      android:strokeColor="#F3B091"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1376.9,537.9c197.2,-40.4 247.9,126.8 234.3,311.2"/>
+      android:pathData="M1376.9 537.87c197.2 -40.43 247.93 126.77 234.26 311.2"
+      android:strokeColor="#F3B091"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1639.3,1061.4c0,187.2 0,374.5 0,561.7"/>
+      android:pathData="M1639.28 1061.42c0 187.23 0 374.45 0 561.67"
+      android:strokeColor="#F3B091"
+      android:strokeWidth="65.69"
+      android:strokeMiterLimit="22.9256" />
 </vector>
