--- a/app/src/main/res/drawable/ic_scissors.xml
+++ b/app/src/main/res/drawable/ic_scissors.xml
@@ -1,55 +1,85 @@
+<!--
+Source (to convert svg to xml):
+https://svg2vector.com/
+(Click "copy code")
+-->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="31.7dp"
-    android:height="37.9dp"
-    android:viewportWidth="1646"
-    android:viewportHeight="1967.6">
+    android:viewportWidth="1646.03"
+    android:viewportHeight="1967.64"
+    android:width="112.415dp"
+    android:height="134.3792dp">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M497.1,1298.9c-150,-259.7 -321.9,-508 -449.9,-779.2 -48.8,-103.4 151.4,-251 250.1,-125.4 143.2,182.1 223.7,373.1 341.8,534.7 46.5,-214.3 51.1,-444.7 81.7,-686.9 19,-150.6 259.8,-158 264.9,1.3 12.3,376.6 -29.4,696.1 -19.2,1010.3 -137.1,124.8 -381,114.9 -469.5,45.3z"/>
+      android:pathData="M497.1 1298.88c-149.96 -259.73 -321.91 -507.96 -449.87 -779.2 -48.77 -103.39 151.39 -250.96 250.13 -125.43 143.22 182.08 223.67 373.07 341.81 534.68 46.52 -214.31 51.06 -444.71 81.67 -686.93 19.03 -150.6 259.76 -157.97 264.94 1.25 12.25 376.63 -29.44 696.13 -19.2 1010.33 -137.13 124.75 -380.98 114.87 -469.49 45.3z"
+      android:fillColor="#F9D3BA"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:pathData="M749.3,239c-17.6,147.4 -26.9,268.8 -39.8,399.7 -11.9,121.6 -29.6,241.1 -56.4,355.8 21.9,-21.6 58.3,-31.6 65.1,-65 43.5,-212.9 34.5,-436.5 60.8,-654.1 5,-41.1 29.6,-77.3 44.9,-115.9 -23.1,8.1 -65.9,27.9 -74.8,79.6z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M749.27 238.96c-17.56 147.42 -26.93 268.81 -39.78 399.68 -11.93 121.55 -29.56 241.1 -56.39 355.75 21.89 -21.6 58.29 -31.56 65.14 -65.03 43.55 -212.92 34.52 -436.51 60.85 -654.12 4.97 -41.06 29.58 -77.32 44.93 -115.9 -23.14 8.12 -65.94 27.85 -74.75 79.62z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M72.3,508.2c-18.3,-39.3 16.9,-77.9 27.4,-88 74.9,261.9 264,510.8 419.2,735.5 36.7,53.2 86.6,103.4 135.5,165.3 -14.3,-1.4 -30,-1.7 -68.8,-11.6 -23.9,-6.1 -46,-14.4 -66.9,-28.8 -69.1,-127.9 -149.6,-245.9 -223.9,-369.2 -48.9,-81.2 -95.3,-163.1 -141.9,-245.1 -28,-49.4 -55.2,-102.3 -80.6,-158.1z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M72.27 508.19c-18.25 -39.33 16.94 -77.91 27.41 -88.03 74.9 261.92 264.03 510.83 419.21 735.54 36.73 53.18 86.64 103.37 135.48 165.26 -14.32 -1.42 -30 -1.7 -68.83 -11.55 -23.86 -6.05 -46.04 -14.43 -66.91 -28.8 -69.13 -127.86 -149.59 -245.92 -223.88 -369.16 -48.93 -81.16 -95.28 -163.06 -141.85 -245.15 -28.04 -49.42 -55.24 -102.29 -80.62 -158.12z"
+      android:fillColor="#F3B091" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1427.7,1140.5c-246.6,-1.2 -505.5,-15.9 -640,130.7 38.8,-39.7 90,-57.4 116.3,-119 45.7,-106.9 48.3,-200 -37.4,-215.7 -36.5,-6.7 -82.2,1.9 -132.1,32.4 -140.7,85.9 -283.7,226 -349.4,403.6 -128.8,348.4 293.6,515.5 600.6,432.4 345.6,-96.4 597.3,-287.6 442,-664.4z"/>
+      android:pathData="M1427.69 1140.47c-246.57 -1.18 -505.54 -15.9 -640 130.67 38.84 -39.74 89.99 -57.43 116.3 -119 45.67 -106.88 48.25 -199.98 -37.41 -215.68 -36.47 -6.69 -82.21 1.94 -132.12 32.42 -140.68 85.93 -283.71 225.99 -349.36 403.58 -128.81 348.44 293.56 515.53 600.57 432.42 345.6 -96.4 597.34 -287.6 442.02 -664.4z"
+      android:fillColor="#FCD4BE"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M793.9,1245.4c27.3,99.8 25.8,183.2 -4.9,253.7"/>
+      android:pathData="M793.94 1245.37c27.33 99.84 25.8 183.23 -4.89 253.71"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:pathData="M828.8,1271.6c30.2,160.7 128.5,175.2 261.3,107.1 124.7,150 207,6.9 293.3,-93.5 -161.6,-40.5 -323.3,-80.9 -485,-121.3 -1.5,2.3 -4.7,4.3 -4.3,6.9l6.3,52.3c-20.2,7.5 -44.8,25.3 -71.6,48.6z"
+      android:pathData="M828.81 1271.62c30.18 160.66 128.49 175.19 261.31 107.05 124.74 150.04 207.01 6.92 293.29 -93.53 -161.65 -40.45 -323.31 -80.9 -484.95 -121.35 -1.45 2.31 -4.67 4.25 -4.34 6.95l6.33 52.28c-20.24 7.52 -44.77 25.29 -71.64 48.61z"
       android:fillColor="#332C2B"
-      android:fillAlpha="0.2"/>
+      android:fillAlpha="0.2" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1113.4,1279.1c56.5,218.2 361.3,4.7 325.3,-313 -20.9,-121.7 -81.9,-189.4 -207.3,-162 -36.2,12.8 -62.2,31.1 -78.3,54.9 57.4,166.3 30.9,301.4 -39.8,420.1z"/>
+      android:pathData="M1113.42 1279.05c56.55 218.16 361.32 4.68 325.34 -312.98 -20.85 -121.71 -81.94 -189.45 -207.28 -161.98 -36.18 12.79 -62.2 31.12 -78.25 54.91 57.44 166.28 30.89 301.36 -39.8 420.06z"
+      android:fillColor="#FCD4BE"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:pathData="M1142.3,1283.8c7.1,-12.4 13.3,-22.8 25.4,-47.8 9.6,-19.9 17.8,-42.6 28,-78.3 28.4,68.6 55.9,139.4 115.3,128.3 -33.5,34 -60.7,46.9 -83.4,51.8 -38.9,10.7 -67.4,-7 -85.3,-54z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M1142.35 1283.78c7.1 -12.38 13.34 -22.82 25.41 -47.85 9.58 -19.87 17.84 -42.62 27.98 -78.25 28.38 68.58 55.9 139.35 115.28 128.3 -33.52 33.96 -60.7 46.9 -83.42 51.78 -38.89 10.69 -67.4 -7.04 -85.25 -53.99z"
+      android:fillColor="#F3B091" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M925.1,1202.3c-1.9,-15.1 -2.9,-30.3 -5.3,-45.4 -8.4,-53.6 46.6,-98.9 -6.7,-210.7 -4.2,-8.8 1.3,-19.5 2.2,-29.2 2.2,-24 5.4,-47.9 9.8,-71.6 27.9,-151.4 249.7,-169.5 270.4,-41.2 21.9,135.3 -11.1,292 -35.7,422.8 -25,133.1 -216.1,123 -234.7,-24.7z"/>
+      android:pathData="M925.1 1202.35c-1.9 -15.09 -2.91 -30.33 -5.26 -45.43 -8.35 -53.56 46.62 -98.93 -6.73 -210.72 -4.21 -8.82 1.32 -19.49 2.22 -29.2 2.22 -24 5.42 -47.88 9.78 -71.56 27.89 -151.44 249.7 -169.54 270.43 -41.18 21.85 135.3 -11.11 292.05 -35.7 422.8 -25.03 133.09 -216.11 122.96 -234.74 -24.71z"
+      android:fillColor="#FCD4BE"
+      android:strokeColor="#7D513B"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:pathData="M1027.5,1290.5c-22,-6.8 -45.8,-19.1 -59.6,-44.3 -13.5,-24.5 -16.1,-43.9 -22,-104.9 73.4,73.6 131.6,114.7 183,95.4 -16.8,48.1 -60.5,61.9 -101.4,53.8z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M1027.5 1290.47c-21.99 -6.83 -45.79 -19.11 -59.61 -44.25 -13.47 -24.5 -16.1 -43.9 -21.96 -104.89 73.38 73.63 131.61 114.7 182.97 95.36 -16.84 48.12 -60.52 61.91 -101.4 53.78z"
+      android:fillColor="#F3B091" />
   <path
-      android:pathData="M396.6,1557c-15.7,-59.9 -5.7,-112.4 10.5,-165.1 19.3,-62.9 52.9,-116.7 93.3,-174 -1.3,176.6 -11.6,291.2 82.7,378.1 124.8,115 307.5,121.9 492.2,152 -118.3,41.5 -238.8,71.2 -391.4,35.7 -79.7,-19.6 -127,-42.3 -185.8,-83.4 -59.6,-41.6 -90.3,-98 -101.4,-143.3z"
-      android:fillColor="#F3B091"/>
+      android:pathData="M396.58 1557c-15.73 -59.86 -5.74 -112.45 10.46 -165.15 19.34 -62.9 52.92 -116.69 93.26 -174.02 -1.33 176.63 -11.58 291.17 82.7 378.06 124.75 115 307.52 121.86 492.22 152.03 -118.25 41.47 -238.75 71.18 -391.42 35.7 -79.67 -19.62 -127 -42.32 -185.81 -83.36 -59.57 -41.58 -90.34 -98.01 -101.41 -143.25z"
+      android:fillColor="#F3B091" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M365.4,1780.6c138.6,144.1 324.1,179.8 542.2,149.6"/>
+      android:pathData="M365.44 1780.64c138.64 144.15 324.07 179.84 542.23 149.63"
+      android:strokeColor="#F7B496"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M1583.1,1112.1c54.7,196.9 49.6,354 -38.4,455.8"/>
+      android:pathData="M1583.05 1112.12c54.7 196.92 49.64 354 -38.43 455.75"
+      android:strokeColor="#F7B496"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M870.6,27.7c200.5,27.1 210.4,164.9 210,361.7"/>
+      android:pathData="M870.6 27.66c200.5 27.06 210.36 164.86 210.03 361.72"
+      android:strokeColor="#F7B496"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M798.5,27c-95.2,18 -128.6,67 -152.4,149.6"/>
+      android:pathData="M798.53 26.98c-95.15 17.97 -128.58 67.03 -152.37 149.63"
+      android:strokeColor="#F7B496"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M23.6,768.9c79.6,134.5 159.2,269.1 238.9,403.6"/>
+      android:pathData="M23.63 768.94c79.62 134.53 159.24 269.06 238.86 403.58"
+      android:strokeColor="#F7B496"
+      android:strokeWidth="54.91"
+      android:strokeMiterLimit="22.9256" />
 </vector>
