--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,9 @@
     <TextView
         android:id="@+id/tv_header_paper"
         style="@style/Text.Header"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:text="@string/header_paper"
-        android:textColor="#EF6C00"
+        android:textColor="@color/orange_600"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:id="@+id/tv_header_scissors"
         style="@style/Text.Header"
         android:text="@string/header_scissors"
-        android:textColor="#689F38"
+        android:textColor="@color/light_green_700"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_header_paper" />
@@ -37,30 +37,53 @@
     <TextView
         android:id="@+id/tv_player_one"
         style="@style/Text.Player"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="10dp"
         android:text="@string/player_one"
-        android:textColor="#039BE5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_header_rock" />
 
     <TextView
         android:id="@+id/tv_player_cpu"
         style="@style/Text.Player"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="50dp"
         android:text="@string/player_cpu"
-        android:textColor="#039BE5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_header_rock" />
+
+    <ImageView
+        android:id="@+id/iv_player_rock"
+        style="@style/Base.Button"
+        app:layout_constraintDimensionRatio="50:75"
+        android:layout_marginStart="25dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_player_one"
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/player_rock_button"
+        android:src="@drawable/ic_rock" />
+
+    <ImageView
+        android:id="@+id/iv_bot_rock"
+        style="@style/Base.Button"
+        app:layout_constraintDimensionRatio="50:75"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_player_cpu"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/bot_rock_button"
+        android:src="@drawable/ic_rock" />
+
+    <ImageView
+        android:id="@+id/iv_player_paper"
+        style="@style/Base.Button"
+        android:layout_marginStart="35dp"
+        app:layout_constraintDimensionRatio=".5"
+        app:layout_constraintTop_toBottomOf="@id/iv_player_rock"
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/player_paper_button"
+        android:src="@drawable/ic_paper" />
 
     <FrameLayout
         android:id="@+id/fl_versus"
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="340dp"
+        android:layout_marginTop="75dp"
         app:layout_constraintTop_toBottomOf="@id/tv_header_rock"
         app:layout_constraintStart_toEndOf="@id/tv_player_one"
         app:layout_constraintEnd_toStartOf="@id/tv_player_cpu">
@@ -71,9 +94,41 @@
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:textSize="75sp"
-            android:textColor="#F44336"
+            android:textColor="@color/red_500"
             android:text="@string/middle_versus"/>
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/iv_bot_paper"
+        style="@style/Base.Button"
+        android:layout_marginEnd="27.5dp"
+        app:layout_constraintDimensionRatio=".5"
+        app:layout_constraintTop_toBottomOf="@id/iv_bot_rock"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/bot_paper_button"
+        android:src="@drawable/ic_paper" />
+
+    <ImageView
+        android:id="@+id/iv_player_scissors"
+        style="@style/Base.Button"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintDimensionRatio=".5"
+        app:layout_constraintTop_toBottomOf="@id/iv_player_paper"
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/player_scissors_button"
+        android:src="@drawable/ic_scissors" />
+
+    <ImageView
+        android:id="@+id/iv_bot_scissors"
+        style="@style/Base.Button"
+        android:layout_marginEnd="27.5dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintDimensionRatio=".5"
+        app:layout_constraintTop_toBottomOf="@id/iv_bot_paper"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/bot_scissors_button"
+        android:src="@drawable/ic_scissors" />
 
     <FrameLayout
         android:id="@+id/fl_replay_button"
