--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,12 @@
     <color name="purple_300">#BA68C8</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="light_blue_500">#03A9F4</color>
+    <color name="light_blue_600">#039BE5</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="amber_700">#FFA000</color>
-    <color name="light_green_500">#8BC34A</color>
+    <color name="orange_600">#EF6C00</color>
+    <color name="red_500">#F44336</color>
+    <color name="light_green_700">#689F38</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
