--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/tv_header_paper"
         style="@style/Text.Header"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="@dimen/_19sdp"
         android:text="@string/header_paper"
         android:textColor="@color/orange_600"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
     <TextView
         android:id="@+id/tv_player_one"
         style="@style/Text.Player"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:text="@string/player_one"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_header_rock" />
@@ -53,7 +53,7 @@
         android:id="@+id/iv_player_rock"
         style="@style/Base.Button"
         app:layout_constraintDimensionRatio="50:75"
-        android:layout_marginStart="25dp"
+        android:layout_marginStart="@dimen/_19sdp"
         app:layout_constraintTop_toBottomOf="@id/tv_player_one"
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="@string/player_rock_button"
@@ -63,7 +63,7 @@
         android:id="@+id/iv_bot_rock"
         style="@style/Base.Button"
         app:layout_constraintDimensionRatio="50:75"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="@dimen/_16sdp"
         app:layout_constraintTop_toBottomOf="@id/tv_player_cpu"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/bot_rock_button"
@@ -72,7 +72,7 @@
     <ImageView
         android:id="@+id/iv_player_paper"
         style="@style/Base.Button"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="@dimen/_27sdp"
         app:layout_constraintDimensionRatio=".5"
         app:layout_constraintTop_toBottomOf="@id/iv_player_rock"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,8 +82,8 @@
     <FrameLayout
         android:id="@+id/fl_versus"
         android:layout_width="wrap_content"
-        android:layout_height="340dp"
-        android:layout_marginTop="75dp"
+        android:layout_height="@dimen/_262sdp"
+        android:layout_marginTop="@dimen/_58sdp"
         app:layout_constraintTop_toBottomOf="@id/tv_header_rock"
         app:layout_constraintStart_toEndOf="@id/tv_player_one"
         app:layout_constraintEnd_toStartOf="@id/tv_player_cpu">
@@ -91,9 +91,9 @@
         <TextView
             style="@style/Text.Base"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center"
-            android:textSize="75sp"
+            android:textSize="@dimen/_60ssp"
             android:textColor="@color/red_500"
             android:text="@string/middle_versus"/>
     </FrameLayout>
@@ -101,7 +101,7 @@
     <ImageView
         android:id="@+id/iv_bot_paper"
         style="@style/Base.Button"
-        android:layout_marginEnd="27.5dp"
+        android:layout_marginEnd="@dimen/_21sdp"
         app:layout_constraintDimensionRatio=".5"
         app:layout_constraintTop_toBottomOf="@id/iv_bot_rock"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,8 +111,8 @@
     <ImageView
         android:id="@+id/iv_player_scissors"
         style="@style/Base.Button"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="@dimen/_27sdp"
+        android:layout_marginTop="@dimen/_4sdp"
         app:layout_constraintDimensionRatio=".5"
         app:layout_constraintTop_toBottomOf="@id/iv_player_paper"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,8 +122,8 @@
     <ImageView
         android:id="@+id/iv_bot_scissors"
         style="@style/Base.Button"
-        android:layout_marginEnd="27.5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_4sdp"
         app:layout_constraintDimensionRatio=".5"
         app:layout_constraintTop_toBottomOf="@id/iv_bot_paper"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,8 +133,8 @@
     <FrameLayout
         android:id="@+id/fl_replay_button"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="@dimen/_77sdp"
+        android:layout_marginEnd="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="0.5:1"
         app:layout_constraintRight_toRightOf="parent">
@@ -147,24 +147,4 @@
             android:src="@drawable/ic_refresh" />
     </FrameLayout>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
