Setting views for each result (win or draw)

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,129 +6,160 @@
     android:layout_height="match_parent"
     tools:context=".ui.game.GameActivity">
 
-    <TextView
-        android:id="@+id/tv_header_paper"
-        style="@style/Text.Header"
+    <LinearLayout
+        android:id="@+id/ll_header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_95sdp"
+        android:orientation="vertical"
         android:layout_marginTop="@dimen/_19sdp"
-        android:text="@string/header_paper"
-        android:textColor="@color/orange_600"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/tv_header_scissors"
-        style="@style/Text.Header"
-        android:text="@string/header_scissors"
-        android:textColor="@color/light_green_700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_header_paper" />
+        <TextView
+            style="@style/Text.Header"
+            android:text="@string/header_paper"
+            android:textColor="@color/orange_600" />
 
-    <TextView
-        android:id="@+id/tv_header_rock"
-        style="@style/Text.Header"
-        android:text="@string/header_rock"
-        android:textColor="@color/purple_300"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_header_scissors" />
+        <TextView
+            style="@style/Text.Header"
+            android:text="@string/header_scissors"
+            android:textColor="@color/light_green_700" />
 
-    <TextView
-        android:id="@+id/tv_player_one"
-        style="@style/Text.Player"
+        <TextView
+            style="@style/Text.Header"
+            android:text="@string/header_rock"
+            android:textColor="@color/purple_300" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_player"
+        style="@style/LinearLayout.Player"
         android:layout_marginStart="@dimen/_8sdp"
-        android:text="@string/player_one"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_header_rock" />
+        app:layout_constraintTop_toBottomOf="@id/ll_header">
 
-    <TextView
-        android:id="@+id/tv_player_cpu"
-        style="@style/Text.Player"
-        android:text="@string/player_cpu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_header_rock" />
+        <TextView
+            style="@style/Text.Player"
+            android:text="@string/player_one" />
 
-    <ImageView
-        android:id="@+id/iv_player_rock"
-        style="@style/Base.Button"
-        app:layout_constraintDimensionRatio="50:75"
-        android:layout_marginStart="@dimen/_19sdp"
-        app:layout_constraintTop_toBottomOf="@id/tv_player_one"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/player_rock_button"
-        android:src="@drawable/ic_rock" />
+        <ImageView
+            android:id="@+id/iv_player_rock"
+            style="@style/Base.Button"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/player_rock_button"
+            android:src="@drawable/ic_rock" />
 
-    <ImageView
-        android:id="@+id/iv_bot_rock"
-        style="@style/Base.Button"
-        app:layout_constraintDimensionRatio="50:75"
-        android:layout_marginEnd="@dimen/_16sdp"
-        app:layout_constraintTop_toBottomOf="@id/tv_player_cpu"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/bot_rock_button"
-        android:src="@drawable/ic_rock" />
+        <ImageView
+            android:id="@+id/iv_player_paper"
+            style="@style/Base.Button"
+            android:layout_width="@dimen/_38sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/player_paper_button"
+            android:src="@drawable/ic_paper" />
 
-    <ImageView
-        android:id="@+id/iv_player_paper"
-        style="@style/Base.Button"
-        android:layout_marginStart="@dimen/_27sdp"
-        app:layout_constraintDimensionRatio=".5"
-        app:layout_constraintTop_toBottomOf="@id/iv_player_rock"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/player_paper_button"
-        android:src="@drawable/ic_paper" />
+        <ImageView
+            android:id="@+id/iv_player_scissors"
+            style="@style/Base.Button"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_width="@dimen/_45sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/player_scissors_button"
+            android:src="@drawable/ic_scissors" />
+    </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/fl_versus"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_262sdp"
         android:layout_marginTop="@dimen/_58sdp"
-        app:layout_constraintTop_toBottomOf="@id/tv_header_rock"
-        app:layout_constraintStart_toEndOf="@id/tv_player_one"
-        app:layout_constraintEnd_toStartOf="@id/tv_player_cpu">
+        app:layout_constraintTop_toBottomOf="@id/ll_header"
+        app:layout_constraintStart_toEndOf="@id/ll_player"
+        app:layout_constraintEnd_toStartOf="@id/ll_bot">
+
+        <LinearLayout
+            android:id="@+id/ll_result_win"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_75sdp"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            tools:background="@color/light_green_700">
+
+            <TextView
+                android:id="@+id/tv_winner"
+                style="@style/Text.Result"
+                android:textSize="@dimen/_17ssp"
+                tools:text="Seorang pemain" />
+
+            <TextView
+                style="@style/Text.Result"
+                android:textSize="@dimen/_26ssp"
+                android:text="@string/text_result_win" />
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_result_draw"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="@dimen/_8sdp">
+
+            <TextView
+                android:id="@+id/tv_result_draw"
+                style="@style/Text.Result"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:background="@color/light_blue_600"
+                android:textSize="@dimen/_26ssp"
+                android:text="@string/text_result_draw" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/tv_versus"
             style="@style/Text.Base"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center"
             android:textSize="@dimen/_60ssp"
             android:textColor="@color/red_500"
-            android:text="@string/middle_versus"/>
+            android:text="@string/middle_versus" />
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/iv_bot_paper"
-        style="@style/Base.Button"
-        android:layout_marginEnd="@dimen/_21sdp"
-        app:layout_constraintDimensionRatio=".5"
-        app:layout_constraintTop_toBottomOf="@id/iv_bot_rock"
+    <LinearLayout
+        android:id="@+id/ll_bot"
+        style="@style/LinearLayout.Player"
+        android:layout_marginEnd="@dimen/_8sdp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/bot_paper_button"
-        android:src="@drawable/ic_paper" />
+        app:layout_constraintTop_toBottomOf="@id/ll_header">
 
-    <ImageView
-        android:id="@+id/iv_player_scissors"
-        style="@style/Base.Button"
-        android:layout_marginStart="@dimen/_27sdp"
-        android:layout_marginTop="@dimen/_4sdp"
-        app:layout_constraintDimensionRatio=".5"
-        app:layout_constraintTop_toBottomOf="@id/iv_player_paper"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/player_scissors_button"
-        android:src="@drawable/ic_scissors" />
+        <TextView
+            style="@style/Text.Player"
+            android:text="@string/player_cpu" />
 
-    <ImageView
-        android:id="@+id/iv_bot_scissors"
-        style="@style/Base.Button"
-        android:layout_marginEnd="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_4sdp"
-        app:layout_constraintDimensionRatio=".5"
-        app:layout_constraintTop_toBottomOf="@id/iv_bot_paper"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/bot_scissors_button"
-        android:src="@drawable/ic_scissors" />
+        <ImageView
+            android:id="@+id/iv_bot_rock"
+            style="@style/Base.Button"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/bot_rock_button"
+            android:src="@drawable/ic_rock" />
+
+        <ImageView
+            android:id="@+id/iv_bot_paper"
+            style="@style/Base.Button"
+            android:layout_width="@dimen/_38sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/player_paper_button"
+            android:src="@drawable/ic_paper" />
+
+        <ImageView
+            android:id="@+id/iv_bot_scissors"
+            style="@style/Base.Button"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_width="@dimen/_45sdp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/player_scissors_button"
+            android:src="@drawable/ic_scissors" />
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/fl_replay_button"
@@ -136,7 +167,7 @@
         android:layout_height="@dimen/_77sdp"
         android:layout_marginEnd="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="0.5:1"
+        app:layout_constraintDimensionRatio=".5"
         app:layout_constraintRight_toRightOf="parent">
 
         <ImageView
@@ -146,5 +177,4 @@
             android:contentDescription="@string/replay_button_description"
             android:src="@drawable/ic_refresh" />
     </FrameLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
