--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -82,7 +82,7 @@
             android:layout_height="@dimen/_75sdp"
             android:orientation="vertical"
             android:layout_gravity="center"
-            tools:background="@color/light_green_700">
+            tools:background="@color/brown_500">
 
             <TextView
                 android:id="@+id/tv_winner"
@@ -108,7 +108,7 @@
                 style="@style/Text.Result"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:background="@color/light_blue_600"
+                android:background="@color/light_blue_600"
                 android:textSize="@dimen/_26ssp"
                 android:text="@string/text_result_draw" />
         </androidx.cardview.widget.CardView>
@@ -162,7 +162,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/fl_replay_button"
+        android:id="@+id/fl_restart_button"
         android:layout_width="0dp"
         android:layout_height="@dimen/_77sdp"
         android:layout_marginEnd="@dimen/_16sdp"
