--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
     <color name="brown_500">#795548</color>
     <color name="orange_600">#EF6C00</color>
     <color name="red_500">#F44336</color>
+    <color name="dark_green_custom">#286400</color>
     <color name="light_green_700">#689F38</color>
+    <color name="light_green_500">#8BC34A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="custom_transparent">#0000E5FF</color>
